--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This project is written by Ali Maleki using Tailwind CSS, JavaScript and jQuery",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tailwind": "npx tailwindcss -i ./tailwind/tailwind.css -o ./css/main.css"
   },
   "keywords": [],
   "author": "",
