--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "This project is written by Ali Maleki using Tailwind CSS, JavaScript and jQuery",
   "main": "index.js",
   "scripts": {
-    "tailwind": "npx tailwindcss -i ./tailwind/tailwind.css -o ./css/main.css --watch"
+    "tailwind": "npx tailwindcss -i ./tailwind/tailwind.css -o ./css/main.css --watch",
+    "server":"json-server --watch db.json"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "tailwindcss": "^3.4.12"
+  },
+  "dependencies": {
+    "json-server": "^1.0.0-beta.2"
   }
 }
