--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "tailwind": "npx tailwindcss -i ./tailwind/tailwind.css -o ./css/main.css --watch",
-    "server": "json-server --watch db.json"
+    "server": "json-server --watch db.json --port 3000"
   },
   "keywords": [],
   "author": "",
